--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,6 @@
 
 @layer base {
   :root {
-    --red: 0.5 100% 43.3%;
-    --red-foreground: 32 91% 11%;
-
     --background: 0 0% 100%;
     --foreground: 30 33% 5%;
     --border: 0 0% 90.3%;
@@ -14,8 +11,8 @@
     --card: 353 10% 93%;
     --card-foreground: 26 5% 27%;
 
-    --primary: var(--red);
-    --primary-foreground: var(--red-foreground);
+    --primary: 39.66 100% 76.86%;
+    --primary-foreground: 39.66 100% 76.86%;
 
     --ring: var(--primary);
     --input: var(--accent);
@@ -31,8 +28,8 @@
       --card: 60 3% 6.5%;
       --card-foreground: 240 4% 75.5%;
 
-      --primary: var(--red);
-      --primary-foreground: var(--red-foreground);
+      --primary: 39.66 100% 76.86%;
+      --primary-foreground: 39.66 100% 76.86%;
     }
   }
 }
